# havoc

./: .gitignore  CMakeLists.txt  License.md  README.md  ReadMe.md
Source/: AppResources.rdef  CMakeLists.txt  MediaKeyHelper.rdef  MixerApp.cpp  VolumeApp.rdef  VolumeControl.cpp  VolumeControl.h  main.cpp
Source/locales/: en.catkeys
Source/popt/: CMakeLists.txt  config.h
